--- a/package.json
+++ b/package.json
@@ -68,11 +68,13 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.462.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.15.0",
     "next-themes": "^0.3.0",
     "node-cron": "^3.0.3",
     "papaparse": "^5.5.3",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.0.379",
     "react": "^18.3.1",
     "react-day-picker": "^9.11.0",
     "react-dom": "^18.3.1",
@@ -84,6 +86,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
     "vaul": "^0.9.9",
     "winston": "^3.17.0",
     "xlsx": "^0.18.5",
@@ -99,8 +102,10 @@
     "@types/express": "^5.0.0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.16.5",
     "@types/node-cron": "^3.0.11",
+    "@types/uuid": "^10.0.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
