--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@
 NODE_ENV=production
 
 # MariaDB Database Configuration
-DB_HOST=mariadb
+DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=mymoney
-DB_USER=MyMoney
-DB_PASSWORD=MyMoney_secure_password_2024!
-DB_ROOT_PASSWORD=rootpassword123
+DB_USER=root
+DB_PASSWORD=password
+DB_ROOT_PASSWORD=password
 DB_SSL=false
 DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
