--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "recharts": "^2.15.4",
     "redis": "^4.7.0",
     "sonner": "^1.7.4",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
@@ -105,9 +106,9 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.16.5",
     "@types/node-cron": "^3.0.11",
-    "@types/uuid": "^10.0.0",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
