--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ NODE_ENV=production
 DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_NAME=mymoney
-DB_USER=root
-DB_PASSWORD=password
+DB_USER=MyMoney
+DB_PASSWORD=MyMoney_secure_password_2024!
 DB_ROOT_PASSWORD=password
 DB_SSL=false
 DB_CHARSET=utf8mb4
